--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,14 @@
 h1 Home#index
 p Find me in app/views/home/index.html.slim
+
+p
+  span class="glyphicon glyphicon-search" aria-hidden="true"
+  | Bootstrap Glyphicons
+  
+p 
+  i class="fa fa-camera-retro fa-lg"
+  | FontAwesome Glyphicons
+
+p
+  | Date:
+  input#datepicker type="text"
