--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,14 +1,18 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
-
-p
-  span class="glyphicon glyphicon-search" aria-hidden="true"
-  | Bootstrap Glyphicons
-  
-p 
-  i class="fa fa-camera-retro fa-lg"
-  | FontAwesome Glyphicons
-
-p
-  | Date:
-  input#datepicker type="text"
+section#about.bg-primary
+  .container
+    .row
+      .col-lg-8.col-lg-offset-2.text-center
+        h1 Home#index
+        p Find me in app/views/home/index.html.slim
+        
+        p
+          span class="glyphicon glyphicon-search" aria-hidden="true"
+          | Bootstrap Glyphicons
+          
+        p 
+          i class="fa fa-camera-retro fa-lg"
+          | FontAwesome Glyphicons
+        
+        p
+          | Date:
+          input#datepicker type="text"
