--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,18 +1,19 @@
-section#about.bg-primary
+header
+  .header-content
+    == render "layouts/alerts"
+    .header-content-inner
+      h1 id="project-moto" Whanna find 
+      a.btn.btn-primary.btn-xl id="show-special-trip" Find interesting trip
+      a.btn.btn-success.btn-xl id="find-team-for-my-trip"  Find team for my trip
+
+section#special-trip.bg-primary
   .container
     .row
-      .col-lg-8.col-lg-offset-2.text-center
-        h1 Home#index
-        p Find me in app/views/home/index.html.slim
-        
-        p
-          span class="glyphicon glyphicon-search" aria-hidden="true"
-          | Bootstrap Glyphicons
-          
-        p 
-          i class="fa fa-camera-retro fa-lg"
-          | FontAwesome Glyphicons
-        
-        p
-          | Date:
-          input#datepicker type="text"
+      .col-lg-4.col-lg-offset-2.text-center
+        input type="text" class="form-control" placeholder="Where would you like to go"
+      .col-lg-2.text-center
+        input#datetimepicker4.form-control type="text"
+      .col-lg-1.text-center
+        button type="button" id="show-special-trip" class="btn btn-danger" Cacel
+      .col-lg-1.text-center
+        button type="button" class="btn btn-success" Search
