--- a/app/views/layouts/_alerts.html.slim
+++ b/app/views/layouts/_alerts.html.slim
@@ -1,22 +1,17 @@
-.row
-  /| <%= render "layouts/sidebar" %
-  .col-xs-12.col-sm-12.col-md-offset-4.col-md-5.main
-    /| <%= render "layouts/nav" %
-    
-    - if flash[:success]
-      .row
-        .col-md-12
-          .alert.alert-success role="alert" 
-            == success
-    
-    - if flash[:notice]
-      .row
-        .col-md-12
-          .alert.alert-warning role="alert" 
-            == notice
-    
-    - if flash[:alert]
-      .row
-        .col-md-12
-          .alert.alert-danger role="alert" 
-            == alert
+- if flash[:success]
+  .row
+    .col-lg-6.col-lg-offset-3
+      .alert.alert-success role="alert" 
+        == success
+  
+- if flash[:notice]
+  .row
+    .col-lg-6.col-lg-offset-3
+      .alert.alert-warning role="alert" 
+        == notice
+  
+- if flash[:alert]
+  .row
+    .col-lg-6.col-lg-offset-3
+      .alert.alert-danger role="alert" 
+        == alert
