--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,7 +2,9 @@ header
   .header-content
     == render "layouts/alerts"
     .header-content-inner
-      h1 id="project-moto" Whanna find 
+      h1 id="project-moto"
+        == image_tag "logo.png", width: "200px", id: "project-logo"
+        | Would you like to habg out with us?
       a.btn.btn-primary.btn-xl id="show-special-trip" Find interesting trip
       a.btn.btn-success.btn-xl id="find-team-for-my-trip"  Find team for my trip
 
@@ -12,7 +14,7 @@ section#special-trip.bg-primary
       .col-lg-4.col-lg-offset-2.text-center
         input type="text" class="form-control" placeholder="Where would you like to go"
       .col-lg-2.text-center
-        input#datetimepicker4.form-control type="text"
+        input#datetimepicker4.form-control type="text" placeholder="Date"
       .col-lg-1.text-center
         button type="button" id="show-special-trip" class="btn btn-danger" Cacel
       .col-lg-1.text-center
