--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,6 @@
+= link_to "Sign out", destroy_user_session_path, method: :delete
+|
+= image_tag current_user.avatar.url(:thumb), size: "100x100" if current_user
 header
   .header-content
     == render "layouts/alerts"
