Add search result UI

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#special-trip.bg-primary {
+#find-special-trip.bg-primary {
   display: none;
+}
+
+#choose-special-trip.bg-primary2 {
+  display: none;
+  height: 80%;
 }
