--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,3 +1,102 @@
 // Place all the styles related to the user controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.top-buffer {
+    margin-top: 20px;
+}
+.top-small-buffer {
+    margin-top: 10px;
+}
+.photoImg {
+    max-width: 150px;
+    display: inline-block;
+}
+.jumbotron {
+    padding-left: 60px;
+    padding-right: 60px;
+    border-radius: 5px;
+}
+
+.nav-tabs li {
+    width: 50%;
+    text-align: center;
+}
+.tab-pane {
+    padding: 20px;
+}
+
+.city-img {
+    position: relative;
+    overflow: hidden;
+}
+.city-name {
+    position: absolute;
+    color: #fff;
+    font-size: 32px;
+    top: 40%;
+    width: 100%;
+    line-height: 1;
+}
+.caption .fa {
+    margin-right: 5px;
+}
+
+.bg {
+    opacity: 0;
+    overflow: visible;
+    background: rgba(0,0,0,0.7);
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+.city-img:hover .bg {
+    opacity: 1;
+}
+.city-img:hover .btn-primary {
+    opacity: 1;
+    -moz-transition-delay: 0.3s;
+    -webkit-transition-delay: 0.3s;
+    -o-transition-delay: 0.3s;
+    -ms-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+.city-img .btn-primary {
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    opacity: 0;
+    top:40%;
+    -webkit-transition: opacity 0.5s 0s ease-in-out;
+    -moz-transition: opacity 0.5s 0s ease-in-out;
+    -o-transition: opacity 0.5s 0s ease-in-out;
+    -ms-transition: opacity 0.5s 0s ease-in-out;
+    transition: opacity 0.5s 0s ease-in-out;
+}
+
+
+
+
+.noPadding {
+    padding: 0;
+}
+
+@media (max-width: 470px) {
+    .mobileHalfWidth {
+        width: 50%;
+    }
+    .mobileFullWidth {
+        width: 100%;
+    }
+}
