Added ability to add trip

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-/ = link_to "Sign out", destroy_user_session_path, method: :delete
+= link_to "Sign out", destroy_user_session_path, method: :delete
 / |
 / = image_tag current_user.avatar.url(:thumb), size: "100x100" if current_user
 header
