--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,13 +2,13 @@ doctype html
 html
   head
     title Team to travel
-    = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    = javascript_include_tag "application", "data-turbolinks-track" => true
+    = stylesheet_link_tag    "application", media: "all"
+    = javascript_include_tag "application"
     = csrf_meta_tags
     meta name="viewport" content="width=device-width, initial-scale=1"
   body
-  
+
   == render "layouts/header"
-  
-  == yield    
+
+  == yield
       /.col-xs-12.col-sm-12.col-md-offset-4.col-md-5.main
