Fully new main page and design

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,13 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'bootstrap-datetimepicker';
-@import "font-awesome";
+@import 'font-awesome';
+@import 'owl.carousel';
+@import 'owl.theme';
 
-@import "creative";
+//@import 'creative';
+
+@import 'blue.min';
+@import 'demo';
+@import 'responsive.min';
+@import 'style.min';
