--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,11 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#find-special-trip.bg-primary {
+#featured {
   display: none;
 }
 
 #choose-special-trip.bg-primary2 {
-  display: none;
+  display: block;
   height: 80%;
 }
