Saved before checkout

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-default.navbar-transparent.navbar-fixed-top role="navigation"
           span Dani
     /! Collect the nav links, forms, and other content for toggling
     #navbar-top.collapse.navbar-collapse
-      ul.nav.navbar-nav.navbar-right
+      ul.nav.nazzvbar-nav.navbar-right
         li
           a href=""  Logout
     /! /.navbar-collapse
