--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@
 @import 'owl.carousel';
 @import 'owl.theme';
 
-//@import 'creative';
+@import 'creative';
 
 @import 'blue.min';
 @import 'demo';
