--- a/app/views/user/index.html.slim
+++ b/app/views/user/index.html.slim
@@ -1,58 +1,45 @@
-section#user-profile.bg-primary
+section#user-profile
   .container
-    .jumbotron#special-trips
-      .top-buffer.mainContent
-        .container
-          .row
-            .col-sm-2.text-center
-              = image_tag "icon-user-default.png", class: "img-circle img-responsive photoImg"
-              a.btn.btn-primary.btn-lg.text-uppercase.top-buffer href="#" role="button"  Add new trip
-            .col-sm-10
-              p.talkbubble
-                | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tristique diam vel libero lobortis, in faucibus elit vulputate. Maecenas lacinia, sapien sit amet auctor pulvinar, nisl leo tincidunt nibh
-          .row
-            
-              
-            .col-sm-9
+    .row
+      .col-md-12
+        .page-title
+          h2 User name
+        .jumbotron#special-trips
+          .top-buffer.mainContent
+            .container
               .row
-                .col-xs-12
-                  h3.text-underline Some information:
-                .col-sm-6.col-xs-12
-                  span#age> How old
-                  | ,
-                  span#State State
-                .top-small-buffer
-                  | Works as:
-                  span#worksAs
-                .top-small-buffer
-                  | Languages:
-                  span#languages
-              .col-sm-6.col-xs-12
-                .top-small-buffer
-                  | From:
-                  span#from
-            .row.hidden
-              .col-xs-12
-                h3.text-underline Plan your next trip:
-              form
-                .col-xs-12
-                  .form-group.form-inline
-                    input#where.form-control placeholder="Where?" type="text" /
-                    input#when.form-control placeholder="When?" type="text" /
-                    button#cancel.btn.btn-danger type="button"  Cancel
-                .col-xs-12
-                  .form-group
-                    textarea.form-control placeholder="Description" rows="3" 
-            .row
-              .container
-                .bs-example.bs-example-tabs data-example-id="togglable-tabs" 
+                .col-sm-2.text-center
+                  = image_tag "icon-user-default.png", class: "img-circle img-responsive photoImg"
+                .col-sm-10
+                  p.talkbubble
+                    | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tristique diam vel libero lobortis, in faucibus elit vulputate. Maecenas lacinia, sapien sit amet auctor pulvinar, nisl leo tincidunt nibh
+            .container
+              .row
+                .col-sm-2.text-center
+                  hr
+                .col-sm-10.text-center
+                  .row
+                    .col-sm-12.text-center
+                      a.btn.btn-primary.btn-lg.text-uppercase.top-buffer.bottomright href="#" role="button"  Add new trip
+            .container
+              .row
+                .bs-example.bs-example-tabs data-example-id="togglable-tabs"
                   ul#myTabs.nav.nav-tabs role="tablist" 
                     li.active role="presentation" 
                       a#home-tab aria-controls="home" aria-expanded="true" data-toggle="tab" href="#home" role="tab"  Feauture trips
                     li role="presentation" 
-                      a#profile-tab aria-controls="profile" data-toggle="tab" href="#profile" role="tab"  Passed trips
+                      a#profile-tab aria-controls="profile" aria-expanded="false" data-toggle="tab" href="#profile" role="tab"  Passed trips
                   #myTabContent.tab-content
-                    #home.tab-pane.fade.in.active aria-labelledby="home-tab" role="tabpanel" 
-                      p Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.
-                    #profile.tab-pane.fade aria-labelledby="profile-tab" role="tabpanel" 
-                      p Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.
+                    #home.tab-pane.fade.active.in aria-labelledby="home-tab" role="tabpanel" 
+                                          
+                      .row.container-post
+                        /! break
+                        .col-md-12.col-sm-12
+                          .post-container
+                            .post-content 
+                              img alt=("danish personal blog template") src="http://templateninja.net/themes/danish/v1.1/img/image-portfolio-02.jpg" /
+                            .post-content
+                              p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                      
+                        #profile.tab-pane.fade aria-labelledby="profile-tab" role="tabpanel" 
+                          p Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.
