--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,40 +1,23 @@
-<<<<<<< HEAD
-nav.navbar.navbar-default.navbar-transparent.navbar-fixed-top role="navigation" 
+nav.navbar.navbar-default.navbar-transparent.navbar-fixed-top role="navigation"
   .container
     /! Brand and toggle get grouped for better mobile display
     .navbar-header
-      button.navbar-toggle data-target="#navbar-top" data-toggle="collapse" type="button" 
+      button.navbar-toggle data-target="#navbar-top" data-toggle="collapse" type="button"
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href="" 
+      a.navbar-brand href=""
         i class="fa fa-user"
           span Dani
     /! Collect the nav links, forms, and other content for toggling
     #navbar-top.collapse.navbar-collapse
       ul.nav.nazzvbar-nav.navbar-right
         li
-          a href=""  Logout
+          = link_to "Logout", destroy_user_session_path, method: :delete
     /! /.navbar-collapse
   /! /.container-fluid
 section#header
-=======
-= link_to "Sign out", destroy_user_session_path, method: :delete
-/ |
-/ = image_tag current_user.avatar.url(:thumb), size: "100x100" if current_user
-header
-  .header-content
-    == render "layouts/alerts"
-    .header-content-inner
-      h1 id="project-moto"
-        == image_tag "logo.png", width: "200px", id: "project-logo"
-        | Would you like to habg out with us
-      a.btn.btn-primary.btn-xl id="show-special-trip" Find interesting trip
-      a.btn.btn-success.btn-xl id="find-team-for-my-trip"  Find team for my trip
-
-section#find-special-trip.bg-primary
->>>>>>> d652d39e47128f964ba9c18e3d08ba92082707e0
   .container
     .row
       .col-md-4
@@ -55,7 +38,7 @@ section#find-special-trip.bg-primary
     .container
       .row
         .col-lg-6.col-lg-offset-1.text-center
-          input#autocomplete class="form-control" onfocus="geolocate()" placeholder="Where would you like to go" type="text" 
+          input#autocomplete class="form-control" onfocus="geolocate()" placeholder="Where would you like to go" type="text"
         .col-lg-3.text-center
           input#datetimepicker4.form-control type="text" placeholder="Date"
         .col-lg-1.text-center
@@ -86,26 +69,26 @@ section#content
               .col-md-6.col-sm-6.col-xs-6
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-calendar"
                         | 10/28/2015
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-users"
                         | 7
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-sun-o"
                         | 5
       /! break
       .col-md-4.col-sm-6
         .post-container
-          .post-content 
+          .post-content
             img alt=("danish personal blog template") src="http://templateninja.net/themes/danish/v1.1/img/image-portfolio-02.jpg" /
           .post-content
             p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
@@ -116,19 +99,19 @@ section#content
               .col-md-6.col-sm-6.col-xs-6
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-calendar"
                         | 10/28/2015
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-users"
                         | 7
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-sun-o"
                         | 5
@@ -145,19 +128,19 @@ section#content
               .col-md-6.col-sm-6.col-xs-6
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-calendar"
                         | 10/28/2015
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-users"
                         | 7
                 .row
                   .col-md-12.col-sm-12.col-xs-12
-                    a href="#" 
+                    a href="#"
                       span
                       i class="fa fa-sun-o"
                         | 5
