Small design bug fixing

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default.navbar-transparent.navbar-fixed-top role="navigation"
+nav.navbar.navbar-default.navbar-fixed-top role="navigation"
   .container
     /! Brand and toggle get grouped for better mobile display
     .navbar-header
@@ -37,13 +37,12 @@ section#header
   section#find-special-trip
     .container
       .row
-        .col-lg-6.col-lg-offset-1.text-center
+        .col-xs-6.col-lg-6.col-lg-offset-1.text-center
           input#autocomplete class="form-control" onfocus="geolocate()" placeholder="Where would you like to go" type="text"
-        .col-lg-3.text-center
+        .col-xs-6.col-lg-3.text-center
           input#datetimepicker4.form-control type="text" placeholder="Date"
-        .col-lg-1.text-center
+        .col-xs-6.col-lg-2.text-center
           button type="button" id="hide-special-trip" class="btn btn-danger" Cacel
-        .col-lg-1.text-center
           button type="button" id="show-special-trips" class="btn btn-success" Search
 /! end:featured
 /! begin:content
