--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -23,14 +23,14 @@ section#header
       .col-md-4
         = image_tag "logo.png", id: "project-logo"
       .col-md-8
-        blockquote
-          p Mendapatkan hati wanita cantik itu tidak mudah, apalagi jika kamu tidak terlalu lucu ~
-          small Tarjono
-          .row
-            .col-md-6
-              a#show-special-trip.btn.text-uppercase.mainBtn.lightgreen Find
-            .col-md-6
-              a#find-team-for-my-trip.btn.text-uppercase.mainBtn add
+        blockquote.hidden-sm
+          p.hidden-sm Mendapatkan hati wanita cantik itu tidak mudah, apalagi jika kamu tidak terlalu lucu ~
+          small.hidden-sm Tarjono
+        .row
+          .col-md-6
+            a#show-special-trip.btn.text-uppercase.mainBtn.lightgreen Find
+          .col-md-6
+            a#find-team-for-my-trip.btn.text-uppercase.mainBtn add
 /! end:header
 /! begin:featured
 #featured
