--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,22 +1,4 @@
-nav.navbar.navbar-default.navbar-fixed-top role="navigation"
-  .container
-    /! Brand and toggle get grouped for better mobile display
-    .navbar-header
-      button.navbar-toggle data-target="#navbar-top" data-toggle="collapse" type="button"
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand href=""
-        i class="fa fa-user"
-          span Dani
-    /! Collect the nav links, forms, and other content for toggling
-    #navbar-top.collapse.navbar-collapse
-      ul.nav.nazzvbar-nav.navbar-right
-        li
-          = link_to "Logout", destroy_user_session_path, method: :delete
-    /! /.navbar-collapse
-  /! /.container-fluid
+= render 'layouts/header'
 section#header
   .container
     .row
@@ -37,12 +19,15 @@ section#header
   section#find-special-trip
     .container
       .row
-        .col-xs-6.col-lg-6.col-lg-offset-1.text-center
+        .col-xs-5.col-lg-6.text-center
           input#autocomplete class="form-control" onfocus="geolocate()" placeholder="Where would you like to go" type="text"
-        .col-xs-6.col-lg-3.text-center
-          input#datetimepicker4.form-control type="text" placeholder="Date"
-        .col-xs-6.col-lg-2.text-center
+        .col-xs-3.col-lg-2.text-center
+          input#datetimepickerFrom.form-control type="text" placeholder="From"
+        .col-xs-3.col-lg-2.text-center
+            input#datetimepickerTo.form-control type="text" placeholder="To"
+        .col-xs-6.col-lg-1.text-center
           button type="button" id="hide-special-trip" class="btn btn-danger" Cacel
+        .col-xs-6.col-lg-1.text-center
           button type="button" id="show-special-trips" class="btn btn-success" Search
 /! end:featured
 /! begin:content
