--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,23 +1,20 @@
-/nav#mainNav.navbar.navbar-default.navbar-fixed-top.affix-top
-/  .container-fluid
-/    /! Brand and toggle get grouped for better mobile display
-/    .navbar-header
-/      button.navbar-toggle.collapsed data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button" 
-/        span.sr-only Toggle navigation
-/        span.icon-bar
-/        span.icon-bar
-/        span.icon-bar
-/      a.navbar-brand.page-scroll href="#page-top"  Start Bootstrap
-/    /! Collect the nav links, forms, and other content for toggling
-/    #bs-example-navbar-collapse-1.collapse.navbar-collapse
-/      ul.nav.navbar-nav.navbar-right
-/        li
-/          a.page-scroll href="#about"  About
-/        li
-/          a.page-scroll href="#services"  Services
-/        li
-/          a.page-scroll href="#portfolio"  Portfolio
-/        li
-/          a.page-scroll href="#contact"  Contact
-/    /! /.navbar-collapse
-/  /! /.container-fluid
+- if current_user
+  nav.navbar.navbar-default.navbar-fixed-top role="navigation"
+    .container
+      /! Brand and toggle get grouped for better mobile display
+      .navbar-header
+        button.navbar-toggle data-target="#navbar-top" data-toggle="collapse" type="button"
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand href=""
+          i class="fa fa-user"
+            span Dani
+      /! Collect the nav links, forms, and other content for toggling
+      #navbar-top.collapse.navbar-collapse
+        ul.nav.nazzvbar-nav.navbar-right
+          li
+            = link_to "Logout", destroy_user_session_path, method: :delete
+      /! /.navbar-collapse
+    /! /.container-fluid
