User account form UI

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -43,6 +43,10 @@ p.talkbubble:before {
   color: #333333;
 }
 
+#user-profile {
+  margin-top: 50px;
+}
+
 /* .top-buffer {
     margin-top: 20px;
 }
