--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -10,9 +10,9 @@ section#header
           small.hidden-sm Tarjono
         .row
           .col-md-6
-            a#show-special-trip.btn.text-uppercase.mainBtn.lightgreen Find
+            a#show-special-trip.btn.text-uppercase.mainBtn Find
           .col-md-6
-            a#find-team-for-my-trip.btn.text-uppercase.mainBtn add
+            a#find-team-for-my-trip.btn.text-uppercase.mainBtn.lightgreen Add
 /! end:header
 /! begin:featured
 #featured
