--- a/app/views/user/_form.html.slim
+++ b/app/views/user/_form.html.slim
@@ -1,17 +1,19 @@
 .col-xs-12
   h3.text-underline Plan your next trip:
   = form_for :trip, url: trip_create_path, remote: true, html: { class: 'trip-form' } do |f|
-    .col-xs-12
-      .form-group.form-inline
-        = f.text_field :destination, id: 'autocomplete', class: 'form-control', placeholder: 'Where?', onfocus: "geolocate()", autocomplete: 'true'
-        = f.text_field :start_date, class: 'form-control', placeholder: 'From', id: 'datetimepickerFrom'
-        = f.text_field :end_date, class: 'form-control', placeholder: 'To', id: 'datetimepickerTo'
-
-    .col-xs-12
-      .form-group
-        = f.text_area :description, class: 'form-control', placeholder: 'Description', rows: '3'
-    .col-xs-12
-      .form-group
+    .row
+      .col-xs-5.col-md-5
+        = f.text_field :destination, id: 'autocomplete', class: "form-control", onfocus: "geolocate()", placeholder: "Where would you like to go", type: "text"
+      .col-xs-3.col-md-2
+        = f.text_field :start_date, id: 'datetimepickerFrom', class: 'form-control', placeholder: "From"
+      .col-xs-3.col-md-2
+        = f.text_field :end_date, id: 'datetimepickerTo', class: 'form-control', placeholder: "To"
+      .col-xs-3.col-md-1
         button#cancel.btn.btn-danger type="button"  Cancel
-        = ' Or '
+      .col-xs-3.col-md-1
         = f.submit 'Create', class: 'btn btn-info'
+      
+    .row
+      .col-xs-12
+        .form-group
+          = f.text_area :description, class: 'form-control', placeholder: 'Description', rows: '3'
