--- a/app/views/user/show.html.slim
+++ b/app/views/user/show.html.slim
@@ -9,16 +9,16 @@ section#user-profile
           .top-buffer.mainContent
             .container
               .row
-                .xs-col-12.col-sm-2.text-center
+                .col-xs-12.col-sm-2.text-center
                   = image_tag "icon-user-default.png", class: "img-circle img-responsive photoImg"
-                .xs-col-12.col-sm-10
+                .col-xs-12.col-sm-10
                   p.talkbubble
                     | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tristique diam vel libero lobortis, in faucibus elit vulputate. Maecenas lacinia, sapien sit amet auctor pulvinar, nisl leo tincidunt nibh
               .row
-                .col-xs-12.text-center
+                .col-xs-12.col-md-2.text-center
                   hr
                     a.btn.btn-primary.btn.text-uppercase.top-buffer.show-trip-form href="" role="button"  Add new trip
-                .col-xs-12
+                .col-xs-12.col-md-10
                   h3.text-underline Some information:
                   .row
                     .col-sm-6.col-xs-12
