--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,4 +1,4 @@
-- if current_user
+- if @user
   nav.navbar.navbar-default.navbar-fixed-top role="navigation"
     .container
       /! Brand and toggle get grouped for better mobile display
@@ -8,10 +8,9 @@
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand href=""
-          i class="fa fa-user"
-            span
-              = current_user.email
+        = link_to "/user/#{@user.id}", class: 'navbar-brand user-name' do
+          i.fa.fa-user
+            span= @user.name
       /! Collect the nav links, forms, and other content for toggling
       #navbar-top.collapse.navbar-collapse
         ul.nav.nazzvbar-nav.navbar-right
