--- a/app/views/home/_search_list.html.slim
+++ b/app/views/home/_search_list.html.slim
@@ -30,4 +30,6 @@
                       i class="fa fa-sun-o"
                         = (trip.end_date.to_date - trip.start_date.to_date).to_i
                 .col-md-12.col-sm-12.col-xs-12
-                  a#show-special-trip.btn.text-uppercase.mainBtn.lightgreen Find
+                  - if current_user
+                    - unless trip.trip_requests.map(&:requestor_id).include?(current_user.id) || trip.owner_id.eql?(current_user.id)
+                      = link_to 'Join', {:controller => "trip_request", :action => "create", :trip_id => trip.id }, id: 'show-special-trip', class: 'btn text-uppercase mainBtn lightgreen', remote: true
