--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -6,11 +6,11 @@ section#header
         = image_tag "logo.png", id: "project-logo"
       .col-md-8
         blockquote.hidden-sm
-          p.hidden-sm The man who goes alone can start today; but he who travels with another must wait till that other is ready.
-          small.hidden-sm Henry David Thoreau
+          p.hidden-sm A journey is best measured in friends rather than miles
+          small.hidden-sm Sasha Grey
         .row
           .col-md-6
-            a#show-special-trip.btn.text-uppercase.mainBtn.lightgreen Find a Travels
+            a#show-special-trip.btn.text-uppercase.mainBtn.lightgreen Find a Trip
           .col-md-6
             - if @user.nil?
               = link_to 'Login','/users/auth/facebook', class: 'btn text-uppercase mainBtn'
